k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: acft-thegeauxpro-com-svc
  labels:
    app.kubernetes.io/name: acft-thegeauxpro-com
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: acft-thegeauxpro-com
  ports:
    - name: http
      port: 80
      targetPort: 8080
      protocol: TCP
