k8s/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: default
  annotations:
    ingress.kubernetes.io/ssl-redirect: "False"
spec:
  ingressClassName: nginx
  rules:
    - host: acft.thegeauxpro.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: acft-thegeauxpro-com-svc
                port:
                  number: 80
  tls: null
